2003-07-28  Stefan Kain  <stefan.kain@freenet.de>

	* flo_rest.d: translated all comments

2003-07-28  Sam Steingold  <sds@gnu.org>

	* pathname.d (directory_search) [WIN32_NATIVE]: save some consing
	(directory_search_scandir) [WIN32_NATIVE]: fixed a GC-safety bug:
	use O(lnk_string) instead of allocating a new string each time
	* constobj.d (lnk_string) [WIN32_NATIVE]: new string

2003-07-28  Sam Steingold  <sds@gnu.org>

	* misc.d (clisp_setenv) [WIN32_NATIVE]: use SetEnvironmentVariable()
	(GETENV) [WIN32_NATIVE]: use GetEnvironmentStrings() and
	FreeEnvironmentStrings() instead of the fictitious `environ' global
	(push_envar): new function, extracted from GETENV

2003-07-28  Sam Steingold  <sds@gnu.org>

	* encoding.d, stream.d, socket.d, misc.d, win32aux.d:
	fixed g++/mingw compilation

2003-07-27  Sam Steingold  <sds@gnu.org>

	* genclisph.d, encoding.d (cstombs_f, cslen_f) [!UNICODE]: macros
	* modules/dirkey/dirkey.c: undef UNICODE before including clisp.h;
	no need for *_encoding without CLISP_UNICODE
	* modules/syscalls/calls.c: define WINVER before including clisp.h;
	no need for *_encoding without CLISP_UNICODE

2003-07-27  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/configure.in: check for signgam
	* modules/syscalls/calls.c (LGAMMA): use the check

2003-07-26  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c, pathname.d (hardlink_file, symlink_file):
	moved from pathname.d to calls.c
	* genclisph.d (Symbol_name, builtin_stream_p): enabled
	fixed the HANDLE problems

2003-07-26  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (CONFIGURES): added config.h.in in wildcard,
	regexp, dirkey and syscall, use autoheader to generate them
	* m4/cc-void.m4 (RL_VOID): fixed the AC_DEFINE call

2003-07-25  Sam Steingold  <sds@gnu.org>

	Converted syscall to a module
	* Makefile.devel (CONFIGURES): added syscalls
	* configure, makemake.in (--with-dir-key): removed option
	* modules/syscalls: new directory